packages updated. build and start issues following update resolved. modal z-index bug resolved

--- a/src/components/ScreenOverlay/index.scss
+++ b/src/components/ScreenOverlay/index.scss
@@ -3,7 +3,7 @@
   height: 100%;
   position: fixed;
   background: rgba(0, 0, 0, 0.3);
-  z-index: 3;
+  z-index: 2;
   top: 0;
   left: 0;
 }
